# elfreader

./: Cargo.toml  LICENCE  README.md
.github/workflows/: rust.yml
src/: cli.rs  elf.rs  main.rs  test_elf_structs_from_bytes.rs  test_from_bytes_endianned.rs
src/elf/: bytes.rs  common.rs  elf_header.rs  header.rs  metadata.rs  mod.rs  program_header.rs  section_header.rs
